--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -4,3 +4,13 @@ html, body, #app{
     margin: 0;
     padding: 0;
 }
+
+.el-breadcrumb {
+    margin-bottom: 15px;
+    font-size: 12px;
+}
+
+/* !important: 作用是提高指定样式规则的应用优先权(优先级), 无法被其他覆盖 */
+.el-card {
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15) !important;
+}
